--- a/Alvks.html
+++ b/Alvks.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no" />
 		<title>Alvks</title>
 		<base href="/">
-		<link href="/Users/aleks/Google Drive/Documents/Technology/IT/Web Dev/alvks.me/css/main-9c7f007017930467.css" rel="stylesheet" type="text/css" />
+		<link href="/Users/adushaj1/Documents/Dev/alvks.github.io/css/main-9c7f007017930467.css" rel="stylesheet" type="text/css" />
 		<link href="img/favicon.png" rel="icon" type="image/png" />
 	</head>
 	<body>
@@ -22,8 +22,10 @@
 						<li>
 							<h4>Games that he enjoys</h4>
 							<h5>mostly FPS with a dash of Nintendo</h5>
-							<p>Apex Legends</p>
 							<p>Destiny 2</p>
+							<p>Overwatch</p>
+							<p>Halo</p>
+							<p>Apex Legends</p>
 							<p>Rocket League</p>
 							<p>Apex Legends</p>
 							<!-- Link to Apex stats: https://apex.tracker.gg/profile/pc/Alvks -->
@@ -37,65 +39,27 @@
 						</li>
 						<li>
 							<h4>He makes montages</h4>
-							<h5>Simplified transitions between clips</h5>
-							<p>All of the footage is recorded using Nvidia Shadowplay and rendered in Sony Vegas.</p>
-							<p><b>Alvks Pro</b> as the first commercial theme for text editors. Carefully selected shades of colors and pixel perfect icons are the foundation of an uncompromising, non-distractive user interface.</p>
-							<p>The single goal of Alvks Pro is to help you focus. It's available for Sublime Text and Visual Studio code.</p>
-							<p>Grab it here: <a href="https://www.Alvks.pro">[www.Alvks.pro]</a></p>
+							<h5>Simple transitions between clips</h5>
+							<p>Footage recorded with Nvidia Shadowplay and rendered in Sony Vegas.</p>
+							<p>Check my content: <a href="https://www.youtube.com/user/alvks">[YouTube]</a></p>
 						</li>
 						<li>
-							<h4>That Can Be My Next Tweet</h4>
-							<h5>That Can Be My Next Tweet generates your future tweets based on the DNA of your existing messages.</h5>
-							<p>The idea is simple, the output mostly absurd, but it generally makes people laugh.</p>
-							<p>It reached 1M visitors in its first week, generating <b>2 tweets per second</b> at its peak. The site got featured on Gizmodo, Time, CNN, The Next Web, Mashable and other blogs.</p>
-							<p>Try it: <a href="http://yes.thatcan.be/my/next/tweet">[thatcan.be/my/next/tweet]</a>
+							<h4>He develops API tools</h4>
+							<h5>A DiscordJS Bot for random team scrimmages.</h5>
+							<p>Gather all of your clan members into a voice channel, execute a command to Alvksi, and watch as the players are randomly drafted into two teams of 2-6 players and moved to their team voice channels. Then, you are ready to play.</p>
+							<p>Try it: <a href="https://discordbots.org/bot/578704612782112778">[Alvksi]</a>
 						</li>
 					</ul>
 				</section>
-				<section>
-					<h3>Expressive works</h3>
-					<ul>
-						<li>
-							<h4>Photos</h4>
-							<h5>Of architecture, forests and humans</h5>
-							<p>I often carry a camera. Sometimes I try to document the current atmosphere.</p>
-							<p>My pictures of the student protests and the occupation of the Maagdenhuis building in 2015 are in the <b>Amsterdam City Archive</b>.</p>
-							<p>See here: <a href="https://www.flickr.com/photos/Alvks/albums">[Alvks on Flickr]</a></p>
-						</li>
-						<li>
-							<h4>Music</h4>
-							<h5>Bleep</h5>
-							<p>A long, long time ago I made some music tracks, ranging from electro to drum 'n bass to chiptunes.</p>
-							<p>I started with a 4 channel module tracker through a pc speaker, and generally built up my way from there. I made music for movies and for games. <b>My trax were in space</b>.</p>
-							<p>Listen here: <a href="https://open.spotify.com/artist/31zte9xdW7iRcL6OzL8ukm">[Alvks on Spotify]</a></p>
-						</li>
-					</ul>
-				</section>
-				<section>
-					<h3>Experiments</h3>
-					<ul>
-						<li>
-							<h4>Deep sea stress</h4>
-							<h5>A creature from below</h5>
-							<p>This creature moves elegantly, but somehow gives unsettling vibes at the same time. You never know what it's up to. <b>It once danced to Bob James.</b></p>
-							<p><a href="/lab/deepSeaJS">[Deep Sea Stress]</a></p>
-						</li>
-						<li>
-							<h4>Ultra Neuron Pong</h4>
-							<h5>AI controlled classic</h5>
-							<p>Game prototype. The classic pong, <b>fully brain controlled</b>. And you can shoot its neurons to slow your opponent.</p>
-							<p><a href="/lab/ultraNeuronPong">[Ultra Neuron Pong]</a></p>
-						</li>
-					</ul>
-				</section>
+				
 				<p class="copyright">
-					(C) 2006-2019 <svg class="Alvks-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><path d="M44.44,11.11h-1.9l-4.51,0-3.2.11-2.72.17-2.43.23L27.46,12l-2.06.36-1.93.42-1.82.48-1.72.54-1.63.61L16.75,15l-1.46.73-1.39.8-1.31.86-1.24.92-1.17,1L9.07,20.38,8,21.5,7,22.69l-.91,1.26-.85,1.33-.78,1.4-.72,1.48-.66,1.56-.59,1.64L2,33.09l-.47,1.84-.41,2L.78,39,.5,41.24.28,43.72.13,46.51,0,49.86l0,5.7V100H11.11V77.78H33.33V100H44.44V77.78H66.67V100H77.78V77.78H88.89V100H100V11.11ZM88.89,66.67H33.33V22.22H88.89ZM77.78,55.56H66.67V33.33H77.78ZM44.44,33.33H55.56V55.56H44.44Z" /></svg> Alvks, all rights reserved. Contact: 'hello' at domain name.				</p>
+					(C) 2006-2019 <svg class="Alvks-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><path d="M44.44,11.11h-1.9l-4.51,0-3.2.11-2.72.17-2.43.23L27.46,12l-2.06.36-1.93.42-1.82.48-1.72.54-1.63.61L16.75,15l-1.46.73-1.39.8-1.31.86-1.24.92-1.17,1L9.07,20.38,8,21.5,7,22.69l-.91,1.26-.85,1.33-.78,1.4-.72,1.48-.66,1.56-.59,1.64L2,33.09l-.47,1.84-.41,2L.78,39,.5,41.24.28,43.72.13,46.51,0,49.86l0,5.7V100H11.11V77.78H33.33V100H44.44V77.78H66.67V100H77.78V77.78H88.89V100H100V11.11ZM88.89,66.67H33.33V22.22H88.89ZM77.78,55.56H66.67V33.33H77.78ZM44.44,33.33H55.56V55.56H44.44Z" /></svg> Alvks, all rights reserved. Contact on Discord: Alvks#1337				</p>
 				<p class="measure">X</p>
 			</div>
 		</div>
 		<canvas class="top"></canvas>
 		<canvas class="bottom"></canvas>
-		<script src="/Users/aleks/Google Drive/Documents/Technology/IT/Web Dev/alvks.me/js/main-9c7f007017930467.js"></script>
+		<script src="/Users/adushaj1/Documents/Dev/alvks.github.io/js/main-9c7f007017930467.js"></script>
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-674478-2"></script>
 		<script>
 			window.dataLayer = window.dataLayer || [];
