--- a/Alvks.html
+++ b/Alvks.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no" />
 		<title>Alvks</title>
 		<base href="/">
-		<link href="/Users/adushaj1/Documents/Dev/alvks.github.io/css/main-9c7f007017930467.css" rel="stylesheet" type="text/css" />
+		<link href="css/main-9c7f007017930467.css" rel="stylesheet" type="text/css" />
 		<link href="img/favicon.png" rel="icon" type="image/png" />
 	</head>
 	<body>
@@ -14,7 +14,7 @@
 				<section>
 					<div class="image-logo"></div>
 					<h1>Alvks is a gamer</h1>
-					<h2>(and an amateur editor)</h2>
+					<h2>(and an amateur developer)</h2>
 				</section>
 				<section>
 					<h3></h3>
@@ -27,11 +27,6 @@
 							<p>Halo</p>
 							<p>Apex Legends</p>
 							<p>Rocket League</p>
-							<p>Apex Legends</p>
-							<!-- Link to Apex stats: https://apex.tracker.gg/profile/pc/Alvks -->
-							<!-- <p>Destiny 2   <a href="https://destinytracker.com/d2/profile/pc/Alvks-1168">[Stats]</a></p>
-							<p>Rocket League   <a href="https://rocketleague.tracker.network/profile/steam/76561198044397281">[Stats]</a></p>
-							<p>Overwatch   <a href="https://www.overbuff.com/players/pc/Alvks-1168">[Stats]</a></p> -->
 							<p>Super Smash Bros Ultimate</p>
 							<p>Pokemon</p>
 							<p>Starcraft</p>
@@ -41,7 +36,7 @@
 							<h4>He makes montages</h4>
 							<h5>Simple transitions between clips</h5>
 							<p>Footage recorded with Nvidia Shadowplay and rendered in Sony Vegas.</p>
-							<p>Check my content: <a href="https://www.youtube.com/user/alvks">[YouTube]</a></p>
+							<p>Check my content: <a href="https://www.youtube.com/user/alroye46">[YouTube]</a></p>
 						</li>
 						<li>
 							<h4>He develops API tools</h4>
@@ -53,15 +48,17 @@
 				</section>
 				
 				<p class="copyright">
-					(C) 2006-2019 <svg class="Alvks-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><path d="M44.44,11.11h-1.9l-4.51,0-3.2.11-2.72.17-2.43.23L27.46,12l-2.06.36-1.93.42-1.82.48-1.72.54-1.63.61L16.75,15l-1.46.73-1.39.8-1.31.86-1.24.92-1.17,1L9.07,20.38,8,21.5,7,22.69l-.91,1.26-.85,1.33-.78,1.4-.72,1.48-.66,1.56-.59,1.64L2,33.09l-.47,1.84-.41,2L.78,39,.5,41.24.28,43.72.13,46.51,0,49.86l0,5.7V100H11.11V77.78H33.33V100H44.44V77.78H66.67V100H77.78V77.78H88.89V100H100V11.11ZM88.89,66.67H33.33V22.22H88.89ZM77.78,55.56H66.67V33.33H77.78ZM44.44,33.33H55.56V55.56H44.44Z" /></svg> Alvks, all rights reserved. Contact on Discord: Alvks#1337				</p>
+					(C) 1994-2019 
+					<!-- <svg class="Alvks-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><path d="M44.44,11.11h-1.9l-4.51,0-3.2.11-2.72.17-2.43.23L27.46,12l-2.06.36-1.93.42-1.82.48-1.72.54-1.63.61L16.75,15l-1.46.73-1.39.8-1.31.86-1.24.92-1.17,1L9.07,20.38,8,21.5,7,22.69l-.91,1.26-.85,1.33-.78,1.4-.72,1.48-.66,1.56-.59,1.64L2,33.09l-.47,1.84-.41,2L.78,39,.5,41.24.28,43.72.13,46.51,0,49.86l0,5.7V100H11.11V77.78H33.33V100H44.44V77.78H66.67V100H77.78V77.78H88.89V100H100V11.11ZM88.89,66.67H33.33V22.22H88.89ZM77.78,55.56H66.67V33.33H77.78ZM44.44,33.33H55.56V55.56H44.44Z" /></svg>-->
+					Alvks, all rights reserved. Contact on Discord: Alvks#1337				</p>
 				<p class="measure">X</p>
 			</div>
 		</div>
 		<canvas class="top"></canvas>
 		<canvas class="bottom"></canvas>
-		<script src="/Users/adushaj1/Documents/Dev/alvks.github.io/js/main-9c7f007017930467.js"></script>
-		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-674478-2"></script>
-		<script>
+		<script src="js/main-9c7f007017930467.js"></script>
+		<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-674478-2"></script> -->
+		<!-- <script>
 			window.dataLayer = window.dataLayer || [];
 
 			function gtag() {
@@ -70,6 +67,6 @@
 
 			gtag('js', new Date());
 			gtag('config', 'UA-674478-2');
-		</script>
+		</script> -->
 	</body>
 </html>
